--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Highcharts</title>
+    <link rel="stylesheet" href="highcharts.css">
 </head>
 <body>
+    <div id="chart"></div>
+
+    <script src="highcharts.js"></script>
+    <script type="text/javascript">
     
+    const data = [1,2,3,4,5];
+    const title = document.getElementsByTagName('title')[0].innerText;
+    
+    const options = {
+                chart: {
+                    type:'bar',
+                    renderTo: document.getElementById('chart')
+                },
+                title: {
+                    text: title
+                },
+                series: [
+                    {
+                        data: data
+                    }
+                ]
+            };
+
+    new Highcharts.Chart(options)
+    </script>
 </body>
 </html>
