Trabalhando com os dados

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
                 title: {
                     text: title
                 },
+                xAxis:{
+                    title:{
+                        text: 'Dias'
+                    },
+                    minRange: 1
+                },
+                yAxis:{
+                    title:{
+                        text: 'Vendas'
+                    }
+                },
                 series: [
                     {
                         name: "Janeiro",
